added robber and the ability to edit

--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -42,6 +42,13 @@
                         style="@style/TextView.MatchParent22sp"
                         android:layout_alignParentTop="true" />
 
+                    <EditText
+                        android:id="@+id/title_edit"
+                        style="@style/TextView.MatchParent22sp"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
+
                     <TextView
                         android:id="@+id/rarityText"
                         style="@style/TextView.WrapContent16sp"
@@ -50,36 +57,66 @@
 
                     <TextView
                         android:id="@+id/rarity"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/title"
                         android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/rarityText" />
 
+                    <EditText
+                        android:id="@+id/rarity_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/title"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/rarityText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
+
                     <TextView
-                        android:id="@+id/weaperonText"
+                        android:id="@+id/weaponText"
                         style="@style/TextView.WrapContent16sp"
                         android:layout_below="@id/rarityText"
                         android:text="@string/weapon" />
 
                     <TextView
-                        android:id="@+id/weaperon"
-                        style="@style/TextView.WrapContent16sp"
+                        android:id="@+id/weapon"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/rarityText"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/weaperonText" />
+                        android:layout_toEndOf="@+id/weaponText" />
+
+                    <EditText
+                        android:id="@+id/weapon_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/rarityText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/weaponText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/eyeText"
                         style="@style/TextView.WrapContent16sp"
-                        android:layout_below="@id/weaperonText"
+                        android:layout_below="@id/weaponText"
                         android:text="@string/eye" />
 
                     <TextView
                         android:id="@+id/eye"
-                        style="@style/TextView.WrapContent16sp"
-                        android:layout_below="@id/weaperonText"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/weaponText"
                         android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/eyeText" />
+
+                    <EditText
+                        android:id="@+id/eye_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/weaponText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/eyeText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/fullnameText"
@@ -89,10 +126,20 @@
 
                     <TextView
                         android:id="@+id/fullname"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/eyeText"
                         android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/fullnameText" />
+
+                    <EditText
+                        android:id="@+id/fullname_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/eyeText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/fullnameText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/sexText"
@@ -102,10 +149,20 @@
 
                     <TextView
                         android:id="@+id/sex"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/fullnameText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/sexText" />
+
+                    <EditText
+                        android:id="@+id/sex_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/fullnameText"
+                        android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/sexText"
-                        android:layout_marginLeft="5dp" />
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/birthdayText"
@@ -115,10 +172,20 @@
 
                     <TextView
                         android:id="@+id/birthday"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/sexText"
                         android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/birthdayText" />
+
+                    <EditText
+                        android:id="@+id/birthday_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/sexText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/birthdayText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/regionText"
@@ -128,10 +195,20 @@
 
                     <TextView
                         android:id="@+id/region"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/birthday"
                         android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/regionText" />
+
+                    <EditText
+                        android:id="@+id/region_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/birthday"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/regionText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/belongingText"
@@ -141,10 +218,20 @@
 
                     <TextView
                         android:id="@+id/belonging"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_below="@id/regionText"
                         android:layout_marginLeft="5dp"
                         android:layout_toEndOf="@+id/belongingText" />
+
+                    <EditText
+                        android:id="@+id/belonging_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@id/regionText"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toEndOf="@+id/belongingText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
@@ -164,9 +251,17 @@
 
                     <TextView
                         android:id="@+id/dest"
-                        style="@style/TextView.WrapContent16sp"
+                        style="@style/TextView.MatchParent16sp"
                         android:layout_width="match_parent"
                         android:layout_below="@id/destText" />
+
+                    <EditText
+                        android:id="@+id/dest_edit"
+                        style="@style/TextView.MatchParent16sp"
+                        android:layout_below="@+id/destText"
+                        android:backgroundTint="#0000"
+                        android:padding="0dp"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
