--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,7 +23,7 @@
         android:padding="24dp">
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/username"
             style="@style/EditText"
             android:hint="@string/username"
             android:lines="1"
@@ -33,7 +33,7 @@
         <EditText
             android:id="@+id/password"
             style="@style/EditText"
-            android:layout_below="@+id/name"
+            android:layout_below="@+id/username"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/roboto"
             android:hint="@string/password"
