--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,7 +73,6 @@
     <style name="EditText" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
-        <item name="android:textColor">@color/text</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColorHint">#AFAFAF</item>
         <item name="android:background">@drawable/edit_text_border</item>
@@ -81,6 +80,27 @@
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
         <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="TextView.MatchParent16sp.EditText">
+        <item name="android:padding">0dp</item>
+        <item name="android:backgroundTint">#0000</item>
+        <item name="android:enabled">false</item>
+        <item name="android:inputType">none</item>
+    </style>
+
+    <style name="TextView.MatchParent22sp.EditText">
+        <item name="android:padding">0dp</item>
+        <item name="android:backgroundTint">#0000</item>
+        <item name="android:enabled">false</item>
+        <item name="android:inputType">none</item>
+    </style>
+
+    <style name="TextView.WrapContent16sp.EditText">
+        <item name="android:padding">0dp</item>
+        <item name="android:backgroundTint">#0000</item>
+        <item name="android:enabled">false</item>
+        <item name="android:inputType">none</item>
     </style>
 
 </resources>
