--- a/app/src/main/res/menu/action_bar.xml
+++ b/app/src/main/res/menu/action_bar.xml
@@ -22,6 +22,14 @@
         android:icon="@drawable/ic_undo"
         app:showAsAction="always" />
 
+
+    <item
+        android:visible="false"
+        android:id="@+id/add"
+        android:title="@string/edit"
+        android:icon="@drawable/ic_add"
+        app:showAsAction="always" />
+
     <item
         android:visible="false"
         android:id="@+id/redo"
