--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,6 @@
 	</style>
 
 	<style name="AppTheme.Light">
-<!--		<item name="windowActionBar">false</item>-->
 		<item name="android:colorBackground">#E5E7EB</item>
 		<item name="colorOnBackground">#F9FAFB</item>
 		<item name="colorOnSecondary">#FFF</item>
@@ -21,6 +20,7 @@
 		<item name="colorOnPrimary">#FFF</item>
 		<!--    текст    -->
 		<item name="android:textColor">#000</item>
+		<item name="alertDialogTheme">@style/Dialog.Light</item>
 	</style>
 
 	<style name="AppTheme.Dark">
@@ -31,11 +31,54 @@
 		<item name="colorPrimary">#374151</item>
 
 		<item name="android:textColor">#FFF</item>
-
+		<item name="alertDialogTheme">@style/Dialog.Dark</item>
 	</style>
 
 	<style name="AppTheme.Launch">
 		<item name="android:windowBackground">@drawable/splash_screen</item>
 		<item name="android:colorBackground">#1F2937</item>
+	</style>
+
+	<style name="Dialog" parent="Theme.MaterialComponents.Dialog.Alert">
+		<item name="android:textColorPrimary">?attr/colorPrimary</item>
+		<item name="android:windowBackground">@drawable/bg_activity</item>
+		<item name="android:fontFamily">@font/roboto</item>
+	</style>
+
+	<style name="Dialog.Light" parent="Theme.MaterialComponents.Dialog.Alert">
+		<item name="android:colorBackground">#E5E7EB</item>
+		<!-- Base colors -->
+		<!--		<item name="colorControlNormal">@color/dialog_checkbox</item>-->
+		<!--		<item name="colorControlActivated">@color/dialog_checkbox_activated</item>-->
+		<!--		<item name="textColorAlertDialogListItem">@color/dialog_list_item</item>-->
+
+		<!-- Button styles -->
+		<!--		<item name="buttonBarPositiveButtonStyle">@style/YDialogPositiveButton</item>-->
+		<!--		<item name="buttonBarNegativeButtonStyle">@style/YDialogNegativeButton</item>-->
+		<!--		<item name="buttonBarNeutralButtonStyle">@style/YDialogNeutralButton</item>-->
+
+		<!-- Sizes -->
+		<!--		<item name="android:lineSpacingExtra">2dp</item>-->
+		<!--		<item name="android:textSize">20sp</item>-->
+		<!--		<item name="android:windowTitleStyle">@style/YDialogTitleTextAppearance</item>-->
+	</style>
+
+
+	<style name="Dialog.Dark" parent="Theme.MaterialComponents.Dialog.Alert">
+		<item name="android:colorBackground">#1F2937</item>
+		<!-- Base colors -->
+<!--		<item name="colorControlNormal">@color/dialog_checkbox</item>-->
+<!--		<item name="colorControlActivated">@color/dialog_checkbox_activated</item>-->
+<!--		<item name="textColorAlertDialogListItem">@color/dialog_list_item</item>-->
+
+		<!-- Button styles -->
+<!--		<item name="buttonBarPositiveButtonStyle">@style/YDialogPositiveButton</item>-->
+<!--		<item name="buttonBarNegativeButtonStyle">@style/YDialogNegativeButton</item>-->
+<!--		<item name="buttonBarNeutralButtonStyle">@style/YDialogNeutralButton</item>-->
+
+		<!-- Sizes -->
+<!--		<item name="android:lineSpacingExtra">2dp</item>-->
+<!--		<item name="android:textSize">20sp</item>-->
+<!--		<item name="android:windowTitleStyle">@style/YDialogTitleTextAppearance</item>-->
 	</style>
 </resources>
