--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,24 +9,18 @@
 
     <Button
         android:id="@+id/toggle"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/cr10dp"
         android:text="@string/change_theme"
-        android:textAllCaps="false"
-        android:textColor="#FFF" />
+        style="@style/Button" />
 
     <Button
         android:id="@+id/login"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="0dp"
         android:background="@drawable/cr10dp"
         android:text="@string/login"
-        android:textAllCaps="false"
-        android:textColor="#FFF" />
+        style="@style/Button"/>
 
 </RelativeLayout>
