--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <item name="padding_horizontal" type="integer">24dp</item>
+    <item name="padding_vertical" type="integer">12dp</item>
 </resources>
