--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="TextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/inter_val</item>
         <item name="android:textSize">16sp</item>
@@ -31,7 +30,6 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-
     <style name="NavigationBarButton">
         <item name="android:layout_height">64dp</item>
         <item name="android:layout_width">64dp</item>
@@ -47,20 +45,6 @@
         <item name="android:orientation">vertical</item>
         <item name="android:paddingLeft">24dp</item>
         <item name="android:paddingRight">24dp</item>
-    </style>
-
-    <style name="Spinner">
-        <item name="android:layout_gravity">right</item>
-        <item name="android:layout_width">150dp</item>
-        <item name="android:layout_height">40dp</item>
-        <item name="android:layout_marginBottom">24dp</item>
-        <item name="android:layout_marginTop">12dp</item>
-        <item name="android:textColor">?android:textColor</item>
-        <item name="android:dropDownVerticalOffset">50dp</item>
-        <item name="android:background">@drawable/cr10dp</item>
-        <item name="android:entries">@array/sort_by</item>
-        <item name="android:spinnerMode">dialog</item>
-        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="Star">
@@ -106,4 +90,13 @@
         <item name="android:maxLines">1</item>
     </style>
 
+    <style name="Button">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@drawable/cr10dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
