--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,56 +1,75 @@
 <resources>
-	<style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+
+	<style name="ActionBar.Dark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+		<item name="colorPrimary">#374151</item>
+		<item name="colorOnPrimary">#4F46E6</item>
+		<item name="navigationIcon">@drawable/ic_back</item>
+		<item name="navigationIconTint">#FFF</item>
+	</style>
+
+	<style name="ActionBar.Light" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+		<item name="colorPrimary">#F9FAFB</item>
+		<item name="colorOnPrimary">#4F46E6</item>
+		<item name="navigationIcon">@drawable/ic_back</item>
+		<item name="navigationIconTint">#FFF</item>
+	</style>
+
+	<style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
 		<item name="android:windowFullscreen">true</item>
 		<item name="android:windowBackground">@drawable/bg_activity</item>
-
 		<item name="android:textViewStyle">@style/TextView</item>
 		<item name="android:navigationBarColor">?android:colorBackground</item>
-
-		<item name="colorSecondary">#4F46E5</item>
+		<item name="colorPrimary">#4F46E5</item>
 		<item name="colorOnSecondary">#FFF</item>
 	</style>
 
 	<style name="AppTheme.Light">
+		<item name="actionBarTheme">@style/ActionBar.Light</item>
+
 		<item name="android:colorBackground">#E5E7EB</item>
 		<item name="colorOnBackground">#F9FAFB</item>
 		<item name="colorOnSecondary">#FFF</item>
 		<!--    фон кнопок    -->
-		<item name="colorPrimary">#F9FAFB</item>
+<!--		<item name="colorPrimary">#F9FAFB</item>-->
 		<!--    текст на конпах    -->
 		<item name="colorOnPrimary">#FFF</item>
 		<!--    текст    -->
 		<item name="android:textColor">#000</item>
-		<item name="alertDialogTheme">@style/Dialog.Light</item>
+<!--		<item name="alertDialogTheme">@style/Dialog.Light</item>-->
+		<item name="materialAlertDialogTheme">@style/Dialog.Light</item>
 	</style>
 
 	<style name="AppTheme.Dark">
+		<item name="actionBarTheme">@style/ActionBar.Dark</item>
 		<item name="android:colorBackground">#1F2937</item>
 		<item name="colorOnBackground">#374151</item>
-
 		<item name="colorOnPrimary">#FFF</item>
-		<item name="colorPrimary">#374151</item>
-
+<!--		<item name="colorPrimary">#374151</item>-->
 		<item name="android:textColor">#FFF</item>
 		<item name="alertDialogTheme">@style/Dialog.Dark</item>
+		<item name="materialAlertDialogTheme">@style/Dialog.Dark</item>
 	</style>
 
 	<style name="AppTheme.Launch">
-		<item name="android:windowBackground">@drawable/splash_screen</item>
+		<item name="android:windowBackground">@drawable/cr15dp</item>
 		<item name="android:colorBackground">#1F2937</item>
 	</style>
 
 	<style name="Dialog" parent="Theme.MaterialComponents.Dialog.Alert">
+<!--		<item name="colorPrimary"></item>-->
 		<item name="android:textColorPrimary">?attr/colorPrimary</item>
-		<item name="android:windowBackground">@drawable/bg_activity</item>
+		<item name="android:windowBackground">@drawable/cr10dp</item>
+		<item name="colorControlNormal">?attr/colorPrimary</item>
 		<item name="android:fontFamily">@font/roboto</item>
 	</style>
 
 	<style name="Dialog.Light" parent="Theme.MaterialComponents.Dialog.Alert">
 		<item name="android:colorBackground">#E5E7EB</item>
+<!--		<item name="android:textColor">#000</item>-->
 		<!-- Base colors -->
 		<!--		<item name="colorControlNormal">@color/dialog_checkbox</item>-->
 		<!--		<item name="colorControlActivated">@color/dialog_checkbox_activated</item>-->
-		<!--		<item name="textColorAlertDialogListItem">@color/dialog_list_item</item>-->
+		<item name="textColorAlertDialogListItem">#000</item>
 
 		<!-- Button styles -->
 		<!--		<item name="buttonBarPositiveButtonStyle">@style/YDialogPositiveButton</item>-->
@@ -66,8 +85,10 @@
 
 	<style name="Dialog.Dark" parent="Theme.MaterialComponents.Dialog.Alert">
 		<item name="android:colorBackground">#1F2937</item>
+<!--		<item name="android:textColor">#FFF</item>-->
+		<item name="textColorAlertDialogListItem">#FFF</item>
+<!--		<item name="android:textColorAlertDialogListItem">#fff</item>-->
 		<!-- Base colors -->
-<!--		<item name="colorControlNormal">@color/dialog_checkbox</item>-->
 <!--		<item name="colorControlActivated">@color/dialog_checkbox_activated</item>-->
 <!--		<item name="textColorAlertDialogListItem">@color/dialog_list_item</item>-->
 
