--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -45,112 +45,113 @@
                         android:padding="0dp" />
 
                     <EditText
-                        android:id="@+id/rarityText"
+                        android:id="@+id/rarity_text"
                         style="@style/TextView.WrapContent16sp.EditText"
                         android:layout_below="@id/title"
-                        android:text="@string/rarity" />
+                        android:text="@string/rarity_with_colon" />
 
                     <EditText
                         android:id="@+id/rarity"
                         style="@style/TextView.MatchParent16sp.EditText"
                         android:layout_below="@id/title"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/rarityText" />
+                        android:layout_toEndOf="@+id/rarity_text" />
 
                     <EditText
-                        android:id="@+id/weaponText"
+                        android:id="@+id/weapon_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/rarityText"
-                        android:text="@string/weapon" />
+                        android:layout_below="@id/rarity_text"
+                        android:text="@string/weapon_with_colon" />
 
                     <EditText
                         android:id="@+id/weapon"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/rarityText"
+                        android:layout_below="@id/rarity_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/weaponText" />
+                        android:layout_toEndOf="@+id/weapon_text" />
 
                     <EditText
-                        android:id="@+id/eyeText"
+                        android:id="@+id/eye_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/weaponText"
-                        android:text="@string/eye" />
+                        android:layout_below="@id/weapon_text"
+                        android:text="@string/eye_with_colon" />
 
                     <EditText
                         android:id="@+id/eye"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/weaponText"
+                        android:layout_below="@id/weapon_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/eyeText" />
+                        android:layout_toEndOf="@+id/eye_text" />
 
                     <EditText
-                        android:id="@+id/fullnameText"
+                        android:id="@+id/fullname_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/eyeText"
-                        android:text="@string/full_name" />
+                        android:layout_below="@id/eye_text"
+                        android:text="@string/full_name_with_colon" />
 
                     <EditText
                         android:id="@+id/fullname"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/eyeText"
+                        android:layout_below="@id/eye_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/fullnameText" />
+                        android:layout_toEndOf="@+id/fullname_text" />
 
                     <EditText
-                        android:id="@+id/sexText"
+                        android:id="@+id/sex_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/fullnameText"
+                        android:layout_below="@id/fullname_text"
                         android:text="@string/gender" />
 
                     <EditText
                         android:id="@+id/sex"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/fullnameText"
+                        android:layout_below="@id/fullname_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/sexText" />
+                        android:layout_toEndOf="@+id/sex_text" />
 
                     <EditText
-                        android:id="@+id/birthdayText"
+                        android:id="@+id/birthday_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/sexText"
-                        android:text="@string/birthday" />
+                        android:layout_below="@id/sex_text"
+                        android:text="@string/birthday_with_colon" />
 
                     <EditText
                         android:id="@+id/birthday"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/sexText"
+                        android:layout_below="@id/sex_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/birthdayText" />
+                        android:layout_toEndOf="@+id/birthday_text" />
 
                     <EditText
-                        android:id="@+id/regionText"
+                        android:id="@+id/region_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/birthdayText"
-                        android:text="@string/region" />
+                        android:layout_below="@id/birthday_text"
+                        android:text="@string/region_with_colon" />
 
                     <EditText
                         android:id="@+id/region"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/birthdayText"
+                        android:layout_below="@id/birthday_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/regionText" />
+                        android:layout_toEndOf="@+id/region_text" />
 
                     <EditText
-                        android:id="@+id/belongingText"
+                        android:id="@+id/affiliation_text"
                         style="@style/TextView.WrapContent16sp.EditText"
-                        android:layout_below="@id/regionText"
+                        android:layout_below="@id/region_text"
                         android:text="@string/belonging" />
 
                     <EditText
-                        android:id="@+id/belonging"
+                        android:id="@+id/affiliation"
                         style="@style/TextView.MatchParent16sp.EditText"
-                        android:layout_below="@id/regionText"
+                        android:layout_below="@id/region_text"
                         android:layout_marginLeft="5dp"
-                        android:layout_toEndOf="@+id/belongingText" />
+                        android:layout_toEndOf="@+id/affiliation_text" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/dest_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/entry"
@@ -169,7 +170,7 @@
                         style="@style/TextView.MatchParent16sp.EditText"
                         android:layout_below="@+id/destText"
                         android:layout_marginStart="0dp"
-                        android:maxLines="999" />
+                        android:singleLine="false" />
 
                 </RelativeLayout>
 
