--- a/app/src/main/res/layout/model_dictionary.xml
+++ b/app/src/main/res/layout/model_dictionary.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_marginHorizontal="24dp"
     android:layout_marginBottom="12dp"
     android:padding="12dp"
