--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,7 +71,7 @@
         <item name="android:backgroundTint">#0000</item>
         <item name="android:enabled">false</item>
         <item name="android:inputType">none</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="TextView.MatchParent22sp.EditText">
@@ -79,7 +79,7 @@
         <item name="android:backgroundTint">#0000</item>
         <item name="android:enabled">false</item>
         <item name="android:inputType">none</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="TextView.WrapContent16sp.EditText">
@@ -87,7 +87,7 @@
         <item name="android:backgroundTint">#0000</item>
         <item name="android:enabled">false</item>
         <item name="android:inputType">none</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="Button">
